--- a/src/FrontEnd/css/dropdown.css
+++ b/src/FrontEnd/css/dropdown.css
@@ -135,7 +135,7 @@
 }
 
 .btn_1:hover {
-  background-color:orange;
+  background-color:#fb830d;
 }
 
 /* Ensure the dropdown has a higher z-index */
