--- a/src/FrontEnd/css/Service.css
+++ b/src/FrontEnd/css/Service.css
@@ -174,10 +174,39 @@
 .bannerimg{
   height: auto;
   object-fit: cover;
+  /* animation: flash 1.5s infinite; */
 }
 @media (max-width:767px) {
   .bannerimg{
     height: 100%;
     object-fit: inherit;
+    animation: flashEffect 0.5s ease-in-out !important;
   }
 }
+
+
+@keyframes flashEffect {
+  0% {
+    opacity: 0.2;
+    filter: brightness(1);
+  }
+  50% {
+    opacity: 1;
+    filter: brightness(1.5);
+  }
+  100% {
+    opacity: 1;
+    filter: brightness(1);
+  }
+}
+
+
+
+/* @keyframes flash {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+} */
