--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -629,7 +629,6 @@
 }
 
 .sticky-footer{
-  position: -webkit-sticky; 
   position: sticky;
   top: 0; 
   z-index: 1000; 
@@ -915,6 +914,15 @@ width: 119%;
 }
 
 
+.arrow-icon {
+  font-size: 24px;
+  transition: transform 0.3s ease;
+  color: lightgray;
+}
+
+.arrow-icon.open .arrow {
+  transform: rotate(180deg); 
+}
 
 
 
