--- a/src/FrontEnd/css/Header.css
+++ b/src/FrontEnd/css/Header.css
@@ -157,10 +157,11 @@
 
   @media (max-width:767px) {
     .usericon-img{
-      width:40px;
-      height: 40px;
+      width:40px !important;
+      height: 40px !important;
       border-radius: 25%;
       border: 1px solid black;
+      
      
     }
 
