--- a/src/FrontEnd/css/Service.css
+++ b/src/FrontEnd/css/Service.css
@@ -238,6 +238,34 @@
   height: auto;
   overflow: hidden;
 }
+@media (max-width:767px) {
+  .fade-image-container {
+    position: relative;
+    width: 100%;
+    height: 110px;
+    overflow: hidden;
+  }
+}
+
+.carouelheight{
+  height: 110px;
+  width: 50%;
+}
+@media (max-width:767px) {
+  .carouelheight{
+    height: 110px;
+    width: 100%;
+  }
+}
+.carouselshow{
+  display: block;
+}
+@media (max-width:767px) {
+  .carouselshow{
+    display: none;
+  }
+}
+
 
 .fade-image {
   opacity: 0;
@@ -254,6 +282,30 @@
   overflow: auto; 
   box-sizing: border-box; 
   padding: 15px; 
+}
+
+
+.fade-in-out {
+  animation: zoomInOut 3s ease-in-out;
+}
+
+@keyframes zoomInOut {
+  0% {
+    opacity: 0;
+    transform: scale(1);
+  }
+  25% {
+    opacity: 1;
+    transform: scale(1.05); 
+  }
+  75% {
+    opacity: 1;
+    transform: scale(1.05); 
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
+  }
 }
 
 
