--- a/src/Pages/Freelisting/Businesslisting/Businesslisting.css
+++ b/src/Pages/Freelisting/Businesslisting/Businesslisting.css
@@ -37,7 +37,7 @@
 }
 
 .selectdrp {
-  /* border: 1px solid #ccc; */
+  border: 1px solid #ccc;
   border-radius: 4px; 
   width: 330px;
   height: 50px;
