--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -969,3 +969,37 @@ width: 119%;
   }
 } */
 
+.profileimgm{
+  margin-left: "20px";
+  align-items: "center";
+  position: "relative",
+}
+@media (max-width:767px) {
+  .profileimgm{
+    margin-left: 9px;
+    align-items: center;
+    position: relative;
+    margin-right: -47px;
+    margin-bottom: 35px;
+  }
+}
+
+.notificationm
+{
+  margin-left: 20px;
+}
+@media (max-width:767px) {
+ .notificationm{
+  margin-left: 20px;
+    /* margin-bottom: -3px; */
+    margin-top: -8px;
+ }
+}
+
+
+@media (max-width:767px) {
+  .freelistingmargin{
+  margin-right: 5px;
+  }
+}
+
