--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -192,7 +192,7 @@
     .yearbusiness{
       font-size: 12px;
       margin-left: 16px;
-      margin-right: 44px;
+      /* margin-right: 44px; */
       margin-top: 13px;
     }
   }
@@ -602,7 +602,7 @@
     height: 106px !important;
     width: 109px !important;
     position: relative;
-    margin-left: 175px ;
+    margin-left: 205px ;
     margin-top: 0px;
   }
 }
@@ -618,6 +618,17 @@
   z-index: 999;
   background-color: white; 
 }
+
+@media (max-width:767px) {
+  .sticky-searchbar {
+    position: -webkit-sticky; 
+    position: sticky;
+    top: 91px; 
+    z-index: 999;
+    background-color: white; 
+  }
+}
+
 
 
 .sticky-menu {
@@ -979,7 +990,7 @@ width: 119%;
     margin-left: 9px;
     align-items: center;
     position: relative;
-    margin-right: -47px;
+    margin-right: -28px;
     margin-bottom: 35px;
   }
 }
@@ -990,7 +1001,7 @@ width: 119%;
 }
 @media (max-width:767px) {
  .notificationm{
-  margin-left: 20px;
+  margin-left: 2px;
     /* margin-bottom: -3px; */
     margin-top: -8px;
  }
@@ -1003,3 +1014,83 @@ width: 119%;
   }
 }
 
+
+.servicecategorybox{
+  height: 152px;
+}
+@media (max-width:767px) {
+  .servicecategorybox{
+    height: 94px;
+  }
+}
+
+.listingreviews{
+  margin: 15px 10px 0px 10px;
+  padding-bottom: 15px;
+}
+@media (max-width:767px) {
+  .listingreviews{
+    margin: 11px 10px -54px 9px !important;
+      padding-bottom: 15px !important;
+  }
+}
+
+.listingb{
+  margin-bottom: 0px;
+}
+@media (max-width:767px) {
+  .listingb{
+    margin-bottom: -7px;
+  }
+}
+
+.listingdiv{
+  margin-top: -19px;
+  margin-left: 2px;
+}
+@media (max-width:767px) {
+  .listingdiv{
+    margin-top: -6px;
+    margin-left: 2px;
+  }
+}
+
+.listingbottom{
+  margin-bottom: -18px;
+}
+
+.writereview{
+  margin-left: 0px;
+}
+@media (max-width:767px) {
+  .writereview{
+    margin-left: -17px;
+  }
+}
+
+.pagebottom{
+  margin-bottom: 0px;
+}
+@media (max-width:767px) {
+  .pagebottom{
+    margin-bottom: -17px;
+  }
+}
+
+.listingaboutus{
+  margin-top: 0px !important;
+    margin-bottom: 0px !important;
+}
+@media (max-width:767px) {
+  .listingaboutus{
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+}
+
+
+@media (max-width:767px) {
+  .selectoption{
+    margin-bottom:1rem !important ;
+  }
+}
