--- a/src/FrontEnd/css/dropdown.css
+++ b/src/FrontEnd/css/dropdown.css
@@ -37,7 +37,7 @@
   position: relative;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
   padding: 20px;
   z-index: 999;
  
