--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -791,7 +791,7 @@ width: 119%;
 
 /*footer*/
 .footertabs{
-  padding-left: 188px;
+  padding-left: 54px;
 }
 @media (max-width:767px) {
   .footertabs{
@@ -1004,6 +1004,7 @@ width: 119%;
   margin-left: 2px;
     /* margin-bottom: -3px; */
     margin-top: -8px;
+    margin-right: 22px;
  }
 }
 
@@ -1020,7 +1021,7 @@ width: 119%;
 }
 @media (max-width:767px) {
   .servicecategorybox{
-    height: 94px;
+    height: 98px;
   }
 }
 
@@ -1092,5 +1093,112 @@ width: 119%;
 @media (max-width:767px) {
   .selectoption{
     margin-bottom:1rem !important ;
+  }
+}
+
+
+@media (max-width:767px) {
+  .selectcategory{
+    margin-left: -19px;
+  }
+}
+
+@media (max-width:767px) {
+  .selectcategoryblock{
+    margin-bottom: -40px;
+  }
+}
+
+.noemployee{
+  margin-left: -99px;
+}
+@media (max-width:767px) {
+  .noemployee{
+    margin-left: -11px;
+  }
+}
+
+
+.sociallink{
+  margin-left: 300px;
+}
+
+@media (max-width:767px) {
+  .sociallink{
+    margin-left: 23px;
+  }
+}
+
+
+@media (max-width:767px) {
+  .terms{
+    margin-left: 23px;
+  }
+}
+
+@media (max-width:767px) {
+  .plink{
+    margin-left: 101px;
+  }
+}
+
+@media (max-width:767px) {
+  .footerspace{
+    padding-top: 0px !important;
+    padding-bottom: 18px !important;
+  }
+}
+
+
+div.scrollmenu {
+  /* background-color: #333; */
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu .imgScroll {
+  display: inline-block !important;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu .imgScroll:hover {
+  /* background-color: #777; */
+
+}
+
+.photogallerymain{
+  width: 300px !important;
+  height: 164px !important;
+}
+@media (max-width:767px) {
+  .photogallerymain{
+    width: 300px;
+    height: 164px;
+    margin-left: 26px;
+  }
+}
+
+.photogallerythumbnail{
+  display: block;
+  width: 35%;
+  height: 84px;
+  margin: 0px 9px;
+  cursor: pointer;
+  
+
+}
+
+@media (max-width:767px) {
+  .photogallerythumbnail{
+    display: block;
+    width: 29%;
+    height: 95px;
+    margin: 0px 9px;
+    cursor: pointer;
+    
+  
   }
 }
