--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -55,7 +55,7 @@
 
 	.dropdown.usericon.listing-btn.mobile-freelisting.profileimgm{
 		float: right;
-		right: 10px;
+		right: 20px;
 	}
 
 	 /* smartphones, Android phones, landscape iPhone */ 
@@ -389,7 +389,7 @@ footer ul {
 	.mim-Box-item img {
 		width: 40px;
 		margin-bottom: 2px;
-		margin-top: 7px;
+		margin-top: 11px;
 	}
 }
 
@@ -433,7 +433,7 @@ footer ul {
 .navbar-brand-offer-btn:hover,
 .navbar-brand-offer-btn:active {
 	text-decoration: none;
-	color: #000;
+	color: white;
 }
 
 .category-featured .navbar .container {
@@ -1093,6 +1093,7 @@ option[value=""][disabled] {
 		padding: 3px 2px;
 		display: block;
 		word-break: break-word;
+		margin-top: -3px;
 	}
 	ul#additional_links li a {
 		font-size: 12px;
@@ -1507,6 +1508,7 @@ option[value=""][disabled] {
 	}
 	.individual-listing-sidebar {
 		margin-top: 15px;
+		margin-bottom: -53px;
 	}
 	.company-progress-star {
 		min-width: 40px;
@@ -1828,5 +1830,6 @@ hr {
 		padding: 15px;
 		margin-bottom: 15px;
 		border: 1px solid gainsboro;
+		border-radius: 12px;
 	}
 }
