--- a/src/Pages/Services/Webdevelopment/Website/Services.css
+++ b/src/Pages/Services/Webdevelopment/Website/Services.css
@@ -10,6 +10,7 @@
             -webkit-transition: none;
             -o-transition: none;
             transition: none;
+            object-fit: contain !important;
         }
 
         .pro-nav-thumb {
