--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -443,10 +443,11 @@
     .social-details>button:nth-child(1),
     .social-details>button:nth-child(2),
     .social-details>button:nth-child(3){
-      width: 29%; 
+      width: 32%; 
       margin: 10px auto;
       display: block;
       text-align: center;
+      height: 27px;
     }
   }
 
@@ -797,6 +798,7 @@ width: 119%;
 @media (max-width:767px) {
   .footertabs{
     padding-left: 0px;
+    margin-bottom: 48px;
   }
 }
 
@@ -1263,5 +1265,43 @@ div.scrollmenu .imgScroll:hover {
   }
 }
 
+.ListingClient{
+  padding-top: 10px;
+  margin:10px;
+  height: 105px !important;
+  width: 127px !important;
+  margin-bottom: 32px;
+  margin-top: 20px;
+}
+@media (max-width:767px) {
+  .ListingClient{
+    padding-top: 10px;
+    margin:10px;
+    height: 99px !important;
+    width: 117px !important;
+    margin-bottom: 32px;
+  margin-top: 20px;
+  }
+}
+
+.listingspecialisation{
+  max-height: 200px;
+  overflow-y: auto;
+  padding: 0;
+  margin-bottom: 16px;
+  list-style-type: none;
+}
 
 
+@media (max-width:767px) {
+  .listingdetailsdiv{
+    margin-top: -7px;
+  }
+}
+
+
+@media (max-width:767px) {
+  .listingpagebanner{
+    margin-bottom: 10px;
+  }
+}
