--- a/src/FrontEnd/css/Header.css
+++ b/src/FrontEnd/css/Header.css
@@ -108,7 +108,7 @@
         margin-right: 19px;
     }
     .nav-links li{
-        margin: 8px 10px;
+        /* margin: 8px 10px; */
     }
     .header_in .row
     {
