--- a/src/FrontEnd/css/style.css
+++ b/src/FrontEnd/css/style.css
@@ -3757,7 +3757,7 @@ a.box_feat h3 {
   }
 
   .strip.map_view {
-    margin: 5px 10px;
+    margin: -2px 10px;
   }
 
   .strip.map_view .listing-bottom-list ul {
@@ -9894,7 +9894,7 @@ article.blog .post_info ul li:last-child i {
 .user_logo_sec {
   display: block;
   margin: auto;
-  width: 100px;
+  width: 109px;
   height: 100px;
 }
 
@@ -9933,7 +9933,7 @@ article.blog .post_info ul li:last-child i {
 
 .cleints_img_sec {
   width: 100%;
-  height: 160px;
+  height: 251px;
 }
 
 .cleints_img {
@@ -10140,7 +10140,7 @@ a.btn_3:hover,
   font-size: 100px;
   /* margin-top: -45px; */
   height: 150px;
-  color: #fff;
+  color: orange;
 }
 
 .chat_user_name {
@@ -10570,7 +10570,7 @@ a.btn_3:hover,
   .client_first_letter {
     font-size: 80px;
     /* margin-top: -18px; */
-    color: #fff;
+    color: orange;
   }
 
   .Count_review {
