--- a/src/FrontEnd/css/Lisiting.css
+++ b/src/FrontEnd/css/Lisiting.css
@@ -31,7 +31,7 @@
     justify-content: center;
     font-size: 80px; /* Adjust as needed for better alignment */
     background-color: #f0f0f0; /* Adjust as needed for better alignment */
-    padding-top: 10px;
+    /* padding-top: 10px; */
     }
 
     .listing-bottom-list{
