--- a/src/FrontEnd/css/Cate.css
+++ b/src/FrontEnd/css/Cate.css
@@ -12,7 +12,7 @@
     display: block;
     background-color: #f8f9fa;
     width: 100%;
-    z-index: 1000;
+    z-index: 995;
   }
 
   .navbar-brand-btn {
@@ -23,6 +23,7 @@
     text-align: center; /* Center the button */
     width: 100%;
     margin-bottom: 10px; /* Optional: add space below the button */
+    height: fit-content;
     
   }
 
