--- a/src/FrontEnd/css/Service.css
+++ b/src/FrontEnd/css/Service.css
@@ -1,7 +1,8 @@
 .image{
-    margin-right: 10px;
+    margin-right: 6px;
     width: 25px;
     height: 25px;
+    margin-left: -11px;
 }
 .linkcolor{
     color: black;
