--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -771,7 +771,7 @@ footer ul {
 }
 
 .company-addes {
-	border-bottom: 1px solid #e4e4e4;
+	/* border-bottom: 1px solid #e4e4e4; */
 	padding-bottom: 5px;
 }
 .mim-Address {
