--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -1812,7 +1812,7 @@ hr {
     margin-bottom: 1rem;
     border: 0;
 	width: 100%;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid #acacac;
 }
 
 
